// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendEmailForm > render > should render 1`] = `ShallowWrapper {}`;

exports[`SendEmailForm > updates > should allow switching from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "addresses": [
          "joe@domain.com",
          "jane@domain.com",
        ],
        "body": "What is a group of tigers called?",
        "subject": "URGENT: I have a question",
        "type": "send_email",
        "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`SendEmailForm > updates > should save changes 1`] = `
{
  "body": {
    "validationFailures": [],
    "value": "What is a group of tigers called?",
  },
  "recipient": {
    "value": "",
  },
  "recipientError": undefined,
  "recipients": {
    "validationFailures": [],
    "value": [
      "joe@domain.com",
      "jane@domain.com",
    ],
  },
  "subject": {
    "validationFailures": [],
    "value": "URGENT: I have a question",
  },
  "valid": true,
}
`;

exports[`SendEmailForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "addresses": [
          "joe@domain.com",
          "jane@domain.com",
        ],
        "body": "What is a group of tigers called?",
        "subject": "URGENT: I have a question",
        "type": "send_email",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
